# home-budget-git

./: .clang-format  .hgignore  CMakeLists.txt  LICENSE  README
data/: budget.sqlite
home-budget-lib/: CMakeLists.txt
home-budget-lib/include/: account.h  balance.h  currency.h  document.h  documenttype.h  engine.h  hb_chrono.h  idatabase-engine.h  istorage.h  payment-document.h  payment-type.h  payments-balance.h  raw-types.h  report-item.h
home-budget-lib/include/currency_exchange/: currency-exchange-manager.h  exchange-rate.h  exchange-rates-client.h  exchange-rates-provider.h  exchange-rates.h  i-currency-rates-client.h  i-currency-rates-provider.h
home-budget-lib/include/storage/: exchange-rates-storage.h  filter-factory.h  filter.h  ifilter-factory.h  ifilter.h  istorage.h  storage.h
home-budget-lib/src/: account.cpp  assert_macro.h  balance.cpp  currency.cpp  document.cpp  documenttype.cpp  engine.cpp  payment-document.cpp  payment-type.cpp  payments-balance.cpp  report-item.cpp
home-budget-lib/src/chrono/: hb_chrono.cpp
home-budget-lib/src/currency_exchange/: currency-exchange-manager.cpp
home-budget.net/: UpgradeLog.XML  WpfHomeBudget.sln  database.sql.html  database.xml
home-budget.net/Backup/: WpfHomeBudget.sln
home-budget.net/Communal/: Communal.csproj  CommunalBalance.cs  CommunalType.cs
home-budget.net/Kernel/: AccountGroup.cs  Document.cs  Kernel.csproj  ReportBuilder.cs  ReportItem.cs
home-budget.net/Reports/: ColumnHeaders.cs  DocTypeInfo.cs  Report.cs  ReportBuilder.cs  Reports.csproj
home-budget.net/WpfHomeBudget/: AccountDialog.xaml  AccountDialog.xaml.cs  AccountsListWindow.xaml  ColorConverter.cs  CurrencyDialog.xaml  CurrencyListWindow.xaml  DocumentEditor.cs  DocumentInOutDialog.xaml  DocumentInOutDialog.xaml.cs  DocumentMoveDialog.xaml  DocumentMoveDialog.xaml.cs  InputDialog.xaml.cs  MainWindow.xaml.cs  MessageDialog.xaml.cs  StartWindow.xaml.cs  WpfHomeBudget.csproj
home-budget.net/WpfHomeBudget.NewDesign/: AccountDialog.xaml  AccountsListWindow.xaml  App.xaml  App.xaml.cs  CommunalDialog.xaml  CommunalTariffDialog.xaml  CommunalTypeDialog.xaml  CommunalTypesList.xaml  CurrencyDialog.xaml  CurrencyListWindow.xaml.cs  DocumentEditor.cs  DocumentGrid.xaml  DocumentMoveDialog.xaml  EventControl.xaml.cs  EventDialog.xaml  EventDialog.xaml.cs  InputDialog.xaml  MessageDialog.xaml.cs  StartWindow.xaml  TextBoxMaskBehavior.cs  WpfHomeBudget.NewDesign.csproj  WpfHomeBudget.sln
home-budget.net/db/: db.csproj
qt-gui/: CMakeLists.txt
qt-gui/src/: doc-type-filter-dialog.h  document-dialog.cpp  document-dialog.h  get-doc-engine.cpp  get-doc-engine.h  main.cpp  mainwindow.cpp  mainwindow.h  movement-dialog.cpp  movement-dialog.h  qfocusedlineedit.cpp  qfocusedlineedit.h
qt-gui/src/forms/: doc-type-filter-dialog.ui  document-dialog.ui  mainwindow.ui  movement-dialog.ui
qt-gui/src/models/: accounts-model.cpp  accounts-model.h  balance-model.cpp  balance-model.h  currencies-model.cpp  currencies-model.h  doc-type-filter-model.cpp  doc-type-filter-model.h  doc-type-model.cpp  doc-type-model.h  documents-model.cpp  documents-model.h  moneyvalidator.cpp  moneyvalidator.h  payments-balance-model.cpp  payments-balance-model.h  payments-model.cpp  payments-model.h  report-model.cpp  report-model.h  shops-model.cpp  shops-model.h  string-format.cpp  string-format.h
qt-gui/src/utils/: convert-utils.cpp  convert-utils.h
res/: icons.qrc
sql-storage/: CMakeLists.txt
sql-storage/include/: database-storage.h  idatabase-engine.h  sql-database-engine.h
sql-storage/src/: data-fields-description.cpp  data-fields-description.h  database-storage.cpp  for-each-field.h  sql-builder.cpp  sql-builder.h
sql-storage/src/filters/: all-accounts-filter.h  all-currency-filter.h  all-filter.h  all-values-filter.h  balance-filter.h  doc-type-sign-filter.h  document-by-date-filter.h  filter-factory.cpp  filter-factory.h  payments-balance-filter.h  payments-filter.h  report-filter.h  shop-filter.h
sql-storage/src/strategies/: fill-report-strategy.cpp  fill-report-strategy.h  fill-shop-list-strategy.cpp  fill-shop-list-strategy.h  fill-strategy.hpp  get_type_traits.hpp  last-id-strategy.cpp  last-id-strategy.h  set-value-functions.cpp  set-value-functions.h  setters.hpp
sqlite-engine/: CMakeLists.txt
sqlite-engine/include/: sqlite-engine.h
sqlite-engine/src/: sqlite-engine.cpp
src/: gui-main.cpp  main.cpp
src/core/: account.cpp  account.h  assert_macro.h  balance.cpp  balance.h  core.h  currency-exchange-manager.cpp  currency-exchange-manager.h  currency-exchange-rate-provider.cpp  currency-exchange-rate-provider.h  currency.cpp  currency.h  document.cpp  document.h  documenttype.cpp  documenttype.h  engine.cpp  engine.h  i-exchange-rates.h  idatabase-engine.h  istorage.h  iweb-engine.h  model.cpp  model.h  payment-document.cpp  payment-document.h  payment-type.cpp  payment-type.h  payments-balance.cpp  payments-balance.h  raw-types.h  report-item.cpp  report-item.h  web-engine.cpp  web-engine.h
src/currency-manager/: currency-exchange-manager.cpp  currency-exchange-manager.h
src/gmail-app/: .hgignore  CMakeLists.txt  main.cpp
src/gmail-app/mail-api/: mail-info-request.cpp  mail-info-request.h  mail-info.h
src/gmail-app/mail-api-gmail/: client_secret-home.budget.001.json  gmail-api.cpp  gmail-api.h  gmail-api.py  send-gmail.py
src/gui/: account-dialog.cpp  account-dialog.h  convert-utils.cpp  convert-utils.h  doc-type-filter-dialog.cpp  doc-type-filter-dialog.h  document-dialog.cpp  document-dialog.h  mainwindow.cpp  mainwindow.h  movement-dialog.cpp  movement-dialog.h  qfocusedlineedit.h
src/sqlite/: sqlite-engine.cpp  sqlite-engine.h
src/storage/: data-fields-description.cpp  data-fields-description.h  database-storage.cpp  database-storage.h  for-each-field.h  sql-builder.cpp  sql-builder.h
src/test_app/: database-test.cpp  main.cpp  web-service-test.cpp
src/utils/: convert-utils.cpp  date-time-utils.cpp  date-time-utils.h
src/web/: b911-currency-rates-provider.cpp  qt-web-engine.cpp  (+8 more)
tests/: sql-builder-test.cpp
(+155 files in other folders)
